methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:8: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.PictureMono3'
override def run() {
             ^