methods.picture.PictureMono3.scala.code
override def run() {
  for (k<- 1 to  9) {
    doublecote()
    suivant
  }
}

override def run() {
}

def faireV() {
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  avance()
}

def cotepur() {
  for (i<- 1 to 9) {
    faireV()
    avance()
  }
}

def doublecote() {
  cotepur()
  recule()
  gauche()
  cotepur()
  droite()
}
def suivant() {
  gauche()
  for (i<- 1 to 6) {
    avance()
    gauche()
    avance()
    droite()
  }
  avance()
  droite()
}